--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTableAndRows.scss
@@ -153,7 +153,7 @@
 		width: 90%;
 		text-align: center;
 		font-size: v.$list-view-empty-list-message-font-size;
-		color: gray;
+		color: v.$table-empty-list-message-text-color;
 	}
 }
 
