--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTopBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTopBar.scss
@@ -28,7 +28,8 @@
 		@include m.vertical-center();
 
 		left: 30px;
-		border: v.$top-bar-base-button-border-width solid v.$mode-top-bar-button-border-color-light;
+		border: v.$top-bar-base-button-border-width solid
+			v.$mode-top-bar-button-border-color-light;
 		border-radius: v.$top-bar-buttton-border-radius;
 		background-color: v.$mode-top-bar-button-background-color-light;
 		height: v.$top-bar-button-height;
@@ -39,8 +40,9 @@
 		cursor: pointer;
 	}
 
-	.centering-container__new-item-button--highlighted {
-		border: (v.$top-bar-base-button-border-width + 1) solid red;
+	.centering-container__new-item-button--tutorial {
+		border: v.$top-bar-tutorial-button-border-width solid
+			v.$mode-top-bar-new-item-tutorial-border-text-color-light;
 	}
 
 	.centering-container__new-item-button__text {
@@ -71,7 +73,8 @@
 		// ...the scss for the colors assigned are in app.scss
 		border: v.$top-bar-search-bar-border-width solid black;
 		border-right: none;
-		border-radius: v.$top-bar-buttton-border-radius 0 0 v.$top-bar-buttton-border-radius;
+		border-radius: v.$top-bar-buttton-border-radius 0 0
+			v.$top-bar-buttton-border-radius;
 		padding: 0px v.$top-bar-search-bar-padding 0px v.$top-bar-search-bar-padding;
 		background-color: v.$mode-top-bar-search-bar-background-color-light;
 		height: v.$top-bar-search-bar-height;
@@ -93,7 +96,8 @@
 		// Since a agap between searchbar and button will appear in chrome otherwise
 		margin-left: -1px;
 		//border: v.$top-bar-search-bar-border-width solid black;
-		border-radius: 0 v.$top-bar-buttton-border-radius v.$top-bar-buttton-border-radius 0;
+		border-radius: 0 v.$top-bar-buttton-border-radius
+			v.$top-bar-buttton-border-radius 0;
 		// This background color should only appear if there was a problem
 		// ...assigning a different background color to this element.
 		// ...the scss for the colors assigned are in app.scss
@@ -131,7 +135,8 @@
 		position: absolute;
 		top: 9px;
 		right: 30px;
-		border: v.$top-bar-base-button-border-width solid v.$mode-top-bar-button-border-color-light;
+		border: v.$top-bar-base-button-border-width solid
+			v.$mode-top-bar-button-border-color-light;
 		border-radius: v.$top-bar-buttton-border-radius;
 		background-color: v.$mode-top-bar-button-background-color-light;
 		height: v.$top-bar-button-height;
@@ -147,9 +152,11 @@
 		margin: -2px 0px 0px;
 		border-width: v.$top-bar-clicked-dropdown-button-border-width;
 		border-bottom: none;
-		border-radius: v.$top-bar-buttton-border-radius v.$top-bar-buttton-border-radius 0 0;
+		border-radius: v.$top-bar-buttton-border-radius
+			v.$top-bar-buttton-border-radius 0 0;
 		height: 45px;
-		width: v.$top-bar-filter-button-width - (v.$top-bar-clicked-dropdown-button-border-width-difference * 2); 
+		width: v.$top-bar-filter-button-width -
+			(v.$top-bar-clicked-dropdown-button-border-width-difference * 2);
 	}
 
 	.filter-area-container__button__text {
@@ -175,7 +182,8 @@
 		top: 52.2px;
 		right: 30px;
 		border: 3px solid black;
-		border-radius: v.$top-bar-buttton-border-radius 0 v.$top-bar-buttton-border-radius v.$top-bar-buttton-border-radius;
+		border-radius: v.$top-bar-buttton-border-radius 0
+			v.$top-bar-buttton-border-radius v.$top-bar-buttton-border-radius;
 		background-color: white;
 		height: v.$top-bar-filter-dropdown-content-container-height;
 		width: v.$top-bar-filter-dropdown-content-container-width;
@@ -194,14 +202,16 @@
 
 	.filter-area-container__content-dropdown__content {
 		float: left;
-		margin: v.$top-bar-filter-button-dropdown-title-margin-top 0 0 v.$top-bar-filter-button-dropdown-title-margin-on-one-side;
+		margin: v.$top-bar-filter-button-dropdown-title-margin-top 0 0
+			v.$top-bar-filter-button-dropdown-title-margin-on-one-side;
 		text-align: center;
 		font-size: v.$filter-dropdown-content-font-size;
 	}
 
 	.filter-area-container__content-dropdown__content--right {
 		float: right;
-		margin: v.$top-bar-filter-button-dropdown-title-margin-top v.$top-bar-filter-button-dropdown-title-margin-on-one-side 0 0;
+		margin: v.$top-bar-filter-button-dropdown-title-margin-top
+			v.$top-bar-filter-button-dropdown-title-margin-on-one-side 0 0;
 	}
 
 	.filter-area-container__content-dropdown__content__title {
@@ -221,7 +231,6 @@
 		margin: v.$top-bar-filter-button-dropdown-checkbox-container-margin;
 	}
 
-
 	.filter-area-container__content-dropdown__content__block__label {
 		display: inline-block;
 		margin: v.$top-bar-filter-button-dropdown-label-margin;
@@ -231,47 +240,48 @@
 		color: v.$filter-button-active-color;
 	}
 
-	.create-item-message-container {
+	.new-item-tutorial-container {
 		position: absolute;
 		top: v.$top-bar-height + 10;
 		left: 95px;
 	}
 
-	.create-item-message-container__arrow-head {
+	.new-item-tutorial-container__arrow-head {
 		height: 0;
 		width: 0;
 		border-left: 14px solid transparent;
 		border-right: 14px solid transparent;
-		border-bottom: 14px solid black;
+		border-bottom: 14px solid
+			v.$mode-top-bar-new-item-tutorial-arrow-background-color-light;
 	}
 
-	.create-item-message-container__arrow-stock {
-		background-color: black;
+	.new-item-tutorial-container__arrow-stock {
+		background-color: v.$mode-top-bar-new-item-tutorial-arrow-background-color-light;
 		margin-left: 11px;
-		height: 50px;
+		height: 66px;
 		width: 6px;
 	}
 
-	.create-item-message-container__bend-message-centering-container {
-		position: relative;
+	.new-item-tutorial-container__bend-message-centering-container {
+		position: absolute;
 		margin: -12px 0px 0px 11px;
 		height: 30px;
-		width: 300px;
+		width: 400px;
 	}
 
-	.create-item-message-container__bend-message-centering-container__arrow-bend {
+	.new-item-tutorial-container__bend-message-centering-container__arrow-bend {
 		@include m.vertical-center();
 
-		background-color: black;
+		background-color: v.$mode-top-bar-new-item-tutorial-arrow-background-color-light;
 		height: 6px;
-		width: 20px;
+		width: 40px;
 	}
 
-	.create-item-message-container__bend-message-centering-container__message {
+	.new-item-tutorial-container__bend-message-centering-container__text {
 		@include m.vertical-center();
 
-		left: 25px;
-		font-size: v.$list-view-top-bar-create-item-message-font-size;
-		color: red;
+		left: 48px;
+		font-size: v.$list-view-top-bar-new-item-tutorial-font-size;
+		color: v.$mode-top-bar-new-item-tutorial-border-text-color-light;
 	}
 }
